--- a/AngularCrud/Views/Shared/_Layout.cshtml
+++ b/AngularCrud/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Index", "Index", "Employee")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -32,9 +34,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        
     </div>
 
     @Scripts.Render("~/bundles/jquery")
