--- a/AngularCrud/Views/Employee/Update.cshtml
+++ b/AngularCrud/Views/Employee/Update.cshtml
@@ -71,8 +71,8 @@
                     {{Emp.Description}}
                 </td>
                 <td>
-                    <input type="button" class="btn btn-danger" value="Update" ng-click="UpdateEmp(Emp)" />
-                    <input type="button" class="btn btn-danger" value="Delete" ng-click="DeleteEmp(Emp)" />
+                    <input type="button" class="btn btn-danger" value="Update" ng-click="UpdateEmp(EmpInfoDto)" />
+                    <input type="button" class="btn btn-danger" value="Delete" ng-click="DeleteEmp(EmpInfoDto)" />
                 </td>
             </tr>
         </table>
