--- a/AngularCrud/Views/Employee/Update.cshtml
+++ b/AngularCrud/Views/Employee/Update.cshtml
@@ -139,7 +139,7 @@
                 </md-input-container>
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
-                        <input type="button" id="btnSave" class="form-control btn-space" value="Update" ng-click="UpdateEmp(Emp)" />
+                        <input type="button" id="btnSave" class="form-control btn-space" value="Update" ng-click="UpdateEmp(EmpInfoDto)" />
                     </div>
                 </div>
             </div>
