--- a/AngularCrud/Views/Employee/Update.cshtml
+++ b/AngularCrud/Views/Employee/Update.cshtml
@@ -71,8 +71,8 @@
                     {{Emp.Description}}
                 </td>
                 <td>
-                    <input type="button" class="btn btn-danger" value="Update" ng-click="UpdateEmp(EmpInfoDto)" />
-                    <input type="button" class="btn btn-danger" value="Delete" ng-click="DeleteEmp(EmpInfoDto)" />
+                    <input type="button" class="btn btn-danger" value="Update" ng-click="UpdateEmp(Emp)" />
+                    <input type="button" class="btn btn-danger" value="Delete" ng-click="DeleteEmp(Emp)" />
                 </td>
             </tr>
         </table>
@@ -139,7 +139,7 @@
                 </md-input-container>
                 <div class="row">
                     <div class="col-sm-6 col-lg-4">
-                        <input type="button" id="btnSave" class="form-control btn-space" value="Update" ng-click="UpdateEmp(EmpInfoDto)" />
+                        <input type="button" id="btnSave" class="form-control btn-space" value="Update" ng-click="UpdateEmp(Emp)" />
                     </div>
                 </div>
             </div>
