--- a/CurdOperation/Content/SCSS/StudentStyle.scss
+++ b/CurdOperation/Content/SCSS/StudentStyle.scss
@@ -1,6 +1,13 @@
 ﻿
 body {
 }
-.btn-success{
-    color:red;
+
+.inputdemoErrors .inputErrorsApp {
+    min-height: 48px;
+}
+
+.inputdemoErrors md-input-container > p {
+    font-size: 0.8em;
+    text-align: left;
+    width: 100%;
 }
