Angularjs crud form

--- a/CurdOperation/Content/SCSS/StudentStyle.css
+++ b/CurdOperation/Content/SCSS/StudentStyle.css
@@ -1,4 +1,7 @@
-﻿.inputdemoErrors .inputErrorsApp {
+﻿body .btnColor {
+  color: red; }
+
+.inputdemoErrors .inputErrorsApp {
   min-height: 48px; }
 
 .inputdemoErrors md-input-container > p {
