add delete curd

--- a/CurdOperation/Views/Student/Update.cshtml
+++ b/CurdOperation/Views/Student/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Update";
 }
 @section HeadContent {
     @Styles.Render("~/Content/Student")
@@ -107,7 +107,7 @@
                 </div>
             </md-input-container>
             <div>
-                <md-button class="md-raised md-primary" ng-click="vm.insertClient()" type="submit">Submit</md-button>
+                <md-button class="md-raised md-primary" ng-click="vm.UpdateClient()" type="submit">Submit</md-button>
             </div>
 
             <p style="font-size:.8em; width: 100%; text-align: center;">
