--- a/CurdOperation/Views/Shared/_Layout.cshtml
+++ b/CurdOperation/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Index", "Index", "Student")</li>
+                    <li>@Html.ActionLink("List", "List", "Student")</li>
                 </ul>
             </div>
         </div>
