--- a/CurdOperation/Views/Student/List.cshtml
+++ b/CurdOperation/Views/Student/List.cshtml
@@ -31,7 +31,7 @@
 
             <td><md-button class="md-raised md-primary" ng-click="vm.UpdateClient(data.Id)" type="submit">Update</md-button></td>
             <td><md-button class="md-raised md-accent" ng-click="vm.DeleteClient(data.Id)" type="submit">Delete</md-button></td>
-            <td><md-button class="md-raised md-success" ng-click="vm.ViewClient(data.Id)" type="submit">View</md-button></td>
+            @*<td><md-button class="md-raised md-success" ng-click="vm.ViewClient(data.Id)" type="submit">View</md-button></td>*@
         </tr>
 
     </table>
