add update delete

--- a/CurdOperation/Views/Student/Index.cshtml
+++ b/CurdOperation/Views/Student/Index.cshtml
@@ -2,9 +2,8 @@
     ViewBag.Title = "Index";
 }
 @section HeadContent {
+    @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Student")
-    @Styles.Render("~/Content/AngularMaterial")
-
 }
 
 
