--- a/CurdOperation/Views/Student/ViewClient.cshtml
+++ b/CurdOperation/Views/Student/ViewClient.cshtml
@@ -2,15 +2,15 @@
     ViewBag.Title = "ViewClient";
 }
 @section HeadContent {
-    @Styles.Render("~/Content/Student")
-    @Styles.Render("~/Content/AngularMaterial")
+    @Styles.Render("~/Content/View")
+    @Styles.Render("~/Content/css")
 
 }
 
-<input Id="hiddenid" value="@ViewBag.Id"/>
+<input Id="hiddenid" value="@ViewBag.Id" />
 
 
-<div ng-app="studentApp" ng-controller="PathwayCtrl as vm">
+<div ng-app="studentApp" ng-controller="ViewCtrl as vm">
     <br />
     <br />
     <br />
@@ -123,5 +123,5 @@
 @section scripts{
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/common")
-    @Scripts.Render("~/bundles/student")
+    @Scripts.Render("~/bundles/ViewClient")
 }
