--- a/CurdOperation/Views/Student/ViewClient.cshtml
+++ b/CurdOperation/Views/Student/ViewClient.cshtml
@@ -20,7 +20,7 @@
 
             <md-input-container class="md-block">
                 <label>Description</label>
-                <input md-maxlength="30" required md-no-asterisk name="description" ng-model="project.description">
+                <input md-maxlength="30" required md-no-asterisk name="description" ng-model="project.Description">
                 <div ng-messages="projectForm.description.$error">
                     <div ng-message="required">This is required.</div>
                     <div ng-message="md-maxlength">The description must be less than 30 characters long.</div>
@@ -30,7 +30,7 @@
             <div layout="row">
                 <md-input-container flex="50">
                     <label>Client Name</label>
-                    <input required name="clientName" ng-model="project.clientName">
+                    <input required name="clientName" ng-model="project.ClientName">
                     <div ng-messages="projectForm.clientName.$error">
                         <div ng-message="required">This is required.</div>
                     </div>
@@ -38,7 +38,7 @@
 
                 <md-input-container flex="50">
                     <label>Project Type</label>
-                    <md-select name="ProjectType" ng-model="project.projectType" required>
+                    <md-select name="ProjectType" ng-model="project.ProjectType" required>
                         <md-option value="app">Application</md-option>
                         <md-option value="web">Website</md-option>
                     </md-select>
@@ -50,10 +50,10 @@
 
             <md-input-container class="md-block">
                 <label>Client Email</label>
-                <input required type="email" name="clientEmail" ng-model="project.clientEmail"
+                <input required type="email" name="ClientEmail" ng-model="project.ClientEmail"
                        minlength="10" maxlength="100" @*ng-pattern='/^.+@.+\..+$/'*@ />
 
-                <div ng-messages="projectForm.clientEmail.$error" role="alert">
+                <div ng-messages="projectForm.ClientEmail.$error" role="alert">
                     <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
                         Your email must be between 10 and 100 characters long and look like an e-mail address.
                     </div>
@@ -62,7 +62,7 @@
 
             <md-input-container class="md-block">
                 <label>Hourly Rate (USD)</label>
-                <input required type="number" step="any" name="rate" ng-model="project.hourlyRate" min="800"
+                <input required type="number" step="any" name="rate" ng-model="project.HourlyRate" min="800"
                        max="4999" ng-pattern="/^1234$/" />
 
                 <div ng-messages="projectForm.rate.$error" multiple md-auto-hide="false">
@@ -109,7 +109,7 @@
                 </div>
             </md-input-container>
             <div>
-                <md-button class="md-raised md-primary" ng-click="vm.ViewClient(data.Id)" type="submit">View</md-button>
+                <md-button class="md-raised md-primary" ng-click="vm.ViewClient()" type="submit">View</md-button>
             </div>
 
             <p style="font-size:.8em; width: 100%; text-align: center;">
