--- a/CurdOperation/Views/Shared/_Layout.cshtml
+++ b/CurdOperation/Views/Shared/_Layout.cshtml
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+   
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
     @RenderSection("HeadContent", required: false)
 </head>
 <body>
@@ -26,6 +28,8 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Index", "Index", "Student")</li>
                     <li>@Html.ActionLink("List", "List", "Student")</li>
+                    <li>@Html.ActionLink("ListDataGrid", "ListDataGrid", "Student")</li>
+
                 </ul>
             </div>
         </div>
@@ -38,7 +42,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
