--- a/CrudDataGrid/Views/Student/Index.cshtml
+++ b/CrudDataGrid/Views/Student/Index.cshtml
@@ -20,7 +20,7 @@
                 <br />
                 <md-input-container class="md-block">
                     <label>Description</label>
-                    <input md-maxlength="30" required md-no-asterisk name="description" ng-model="project.Description">
+                    <input md-maxlength="30" required md-no-asterisk name="Description" ng-model="project.Description">
                     <div ng-messages="projectForm.Description.$error">
                         <div ng-message="required">This is required.</div>
                         <div ng-message="md-maxlength">The description must be less than 30 characters long.</div>
