--- a/CrudDataGrid/Views/Student/Update.cshtml
+++ b/CrudDataGrid/Views/Student/Update.cshtml
@@ -7,7 +7,7 @@
 }
 <h2>Update Client</h2>
 
-<input hidden Id="hiddenid" value="@ViewBag.Id" />
+<input hidden Id="hiddenid" value="@ViewBag.ClientId" />
 <div ng-app="studentApp" ng-controller="UpdateCtrl as vm">
 
     <md-content layout-padding>
