--- a/CurdOperation/Views/Student/ListDataGrid.cshtml
+++ b/CurdOperation/Views/Student/ListDataGrid.cshtml
@@ -17,7 +17,7 @@
 
 <div ng-app="studentApp">
     <div class="demo-container" ng-controller="ListDataCtrl">
-        <div id="gridContainer" dx-data-grid="dataGridOptions"></div>
+        <div id="gridContainer" ></div>
     </div>
 </div>
 
