--- a/CrudDataGrid/Views/Student/Update.cshtml
+++ b/CrudDataGrid/Views/Student/Update.cshtml
@@ -7,8 +7,9 @@
 }
 <h2>Update Client</h2>
 
-<input hidden Id="hiddenid" value="@ViewBag.ClientId" />
-<div ng-app="studentApp" ng-controller="UpdateCtrl as vm">
+<input hidden Id="hiddenid" value="@ViewBag.Id" />
+<input hidden id="viewid" value="@ViewBag.View" />
+<div ng-app="studentApp" ng-controller="UpdateCtrl as sp">
 
     <md-content layout-padding>
         <form name="projectForm">
@@ -18,7 +19,7 @@
             <br />
             <md-input-container class="md-block">
                 <label>Description</label>
-                <input md-maxlength="30" required md-no-asterisk name="description" ng-model="project.Description">
+                <input md-maxlength="30" required md-no-asterisk name="description" ng-model="project.Description" ng-disabled="sp.vw">
                 <div ng-messages="projectForm.description.$error">
                     <div ng-message="required">This is required.</div>
                     <div ng-message="md-maxlength">The description must be less than 30 characters long.</div>
@@ -28,7 +29,7 @@
             <div layout="row">
                 <md-input-container flex="50">
                     <label>Client Name</label>
-                    <input required name="ClientName" ng-model="project.ClientName">
+                    <input required name="clientName" ng-model="project.ClientName" ng-disabled="sp.vw">
                     <div ng-messages="projectForm.ClientName.$error">
                         <div ng-message="required">This is required.</div>
                     </div>
@@ -36,11 +37,11 @@
 
                 <md-input-container flex="50">
                     <label>Project Type</label>
-                    <md-select name="ProjectType" ng-model="project.ProjectType" required>
+                    <md-select name="type" ng-model="project.ProjectType" required ng-disabled="sp.vw">
                         <md-option value="app">Application</md-option>
                         <md-option value="website">Website</md-option>
                     </md-select>
-                    <div ng-messages="projectForm.type.$error">
+                    <div ng-messages="projectForm.ProjectType.$error">
                         <div ng-message="required">This is required.</div>
                     </div>
                 </md-input-container>
@@ -48,9 +49,9 @@
             <md-input-container class="md-block">
                 <label>Client Email</label>
                 <input required type="email" name="ClientEmail" ng-model="project.ClientEmail"
-                       minlength="10" maxlength="100" />
+                       minlength="10" maxlength="100" ng-disabled="sp.vw" />
 
-                <div ng-messages="projectForm.clientEmail.$error" role="alert">
+                <div ng-messages="projectForm.ClientEmail.$error" role="alert">
                     <div ng-message-exp="['required', 'minlength', 'maxlength']">
                         Your email must be between 10 and 100 characters long and look like an e-mail address.
                     </div>
@@ -60,9 +61,9 @@
             <md-input-container class="md-block">
                 <label>Hourly Rate (USD)</label>
                 <input required type="number" step="any" name="HourlyRate" ng-model="project.HourlyRate" min="800"
-                       max="4999" ng-pattern="/^1234$/" />
+                       max="4999" ng-pattern="/^1234$/" ng-disabled="sp.vw" />
 
-                <div ng-messages="projectForm.rate.$error" multiple md-auto-hide="false">
+                <div ng-messages="projectForm.HourlyRate.$error" multiple md-auto-hide="false">
                     <div ng-message="required">
                         You've got to charge something! You can't just <b>give away</b> a Missile Defense
                         System.
@@ -85,7 +86,7 @@
             </md-input-container>
 
             <md-input-container class="md-block">
-                <md-checkbox name="tos" ng-model="project.TermsAndService" ng- required>
+                <md-checkbox name="tos" ng-model="project.TermsAndService" ng-disabled="sp.vw" required>
                     I accept the terms of service.
                 </md-checkbox>
                 <div ng-messages="projectForm.TermsAndService.$error" multiple md-auto-hide="false">
@@ -96,7 +97,7 @@
             </md-input-container>
 
             <md-input-container class="md-block">
-                <md-switch class="md-primary" name="Special" ng-model="project.Special" required>
+                <md-switch class="md-primary" name="Special" ng-model="project.Special" ng-disabled="sp.vw" required>
                     Enable special options.
                 </md-switch>
                 <div ng-messages="projectForm.Special.$error" multiple>
@@ -106,11 +107,15 @@
                 </div>
             </md-input-container>
             <div>
-                <md-button class="md-raised md-primary" ng-click="Vm.UpdateClient()" type="submit">Update</md-button>
+                <md-button class="md-raised md-primary" ng-click="sp.UpdateClient()" type="submit" ng-hide="sp.vw">Update</md-button>
             </div>
 
             <p style="font-size:.8em; width: 100%; text-align: center;">
-                Make sure to include <a href="https://docs.angularjs.org/api/ngMessages" target="_blank">ngMessages</a> module when using ng-message markup.
+                Make sure to include <a href="https://docs.angularjs.org/api/ngMessages
+AngularJS
+AngularJS is what HTML would have been, had it been designed for building web-apps. Declarative templates with data-binding, MVC, dependency injection and great testability story all implemented with pure client-side JavaScript!
+docs.angularjs.org
+" target="_blank">ngMessages</a> module when using ng-message markup.
             </p>
         </form>
     </md-content>
