--- a/CrudDataGrid/Views/Shared/_Layout.cshtml
+++ b/CrudDataGrid/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Index", "Index", "Student")</li>
+                    <li>@Html.ActionLink("DataGridView", "DataGridView", "Student")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
