--- a/CrudDataGrid/Views/Student/DataGridView.cshtml
+++ b/CrudDataGrid/Views/Student/DataGridView.cshtml
@@ -20,7 +20,8 @@
 
         <div class="demo-container">
             <div id="buttonContainer"></div>
-
+            
+            <div id="filtercontainer"></div>
             <div id="gridContainer"></div>
 
         </div>
