--- a/CrudDataGrid/Views/Student/DataGridView.cshtml
+++ b/CrudDataGrid/Views/Student/DataGridView.cshtml
@@ -20,9 +20,10 @@
 
         <div class="demo-container">
             <div id="buttonContainer"></div>
-            
+
             <div id="filtercontainer"></div>
             <div id="gridContainer"></div>
+            <div id="grouping"></div>
 
         </div>
         @section scripts{
